novas mudancas com bootstrap

--- a/pet-list.html
+++ b/pet-list.html
@@ -41,7 +41,7 @@
       <h1 class="text-secondary">Meet our Virtual Pets</h1>
       <p>They are looking forward to meeting you!</p>
 
-      <table>
+      <table class="table table-striped table-group-divider caption-top">
         <caption>Our Virtual Pets</caption>
         <thead>
           <tr>
