--- a/pet-create.html
+++ b/pet-create.html
@@ -40,48 +40,58 @@
     <div class="container">
       <h1 class="text-secondary">Create a Custom Virtual Pet</h1>
       <form action="" method="get">
-        <p>
-          <label for="name">Pet's name:</label>
-          <input type="text" id="name" name="pet-name" required>
-        </p>
-        <fieldset>
-          <legend>What type of pet?</legend>
-          <input type="radio" id="dog" name="pet-type" value="dog">
-          <label for="dog">Dog</label>
-          <input type="radio" id="cat" name="pet-type" value="cat">
-          <label for="cat">Cat</label>
-        </fieldset>
-        <p>
-          <label for="breed">Pet's breed:</label>
-          <select id="breed" name="pet-breed">
-            <option value="calico">Calico</option>
-            <option value="tabby">Tabby</option>
-            <option value="corgi">Corgi</option>
-          </select>
-        </p>
-        <p>
-          <label for="adoption-date">Virtual adoption date:</label>
-          <input type="date" id="adoption-date" name="pet-adoption-date">
-        </p>
-        <p>
-          <label for="age">Pet's age:</label>
-          <input type="number" id="age" name="pet-age">
-        </p>
-        <p>
-          <label for="backstory">Pet's backstory:</label>
-          <textarea id="backstory" name="pet-backstory" rows="5"></textarea>
-        </p>
-        <p>
-          <label for="email">Owner's email:</label>
-          <input type="email" id="email" name="owner-email">
-        </p>
-        <p>
-          <input type="checkbox" id="mailing-list" name="add-to-mailing-list" value="true">
-          <label for="mailing-list">Add me to your mailing list</label>
-        </p>
-        <p>
-          <button>Save this pet</button>
-        </p>
+        <div class="row mt-3">
+          <div class="col-md-6">
+            <label class="form-label" for="name">Pet's name:</label>
+            <input class="form-control" type="text" id="name" name="pet-name" required>
+          </div>
+          <div class="col-md-6">
+            <label class="form-label" for="adoption-date">Virtual adoption date:</label>
+            <input class="form-control" type="date" id="adoption-date" name="pet-adoption-date">
+          </div>
+        </div>
+
+        <div class="row mt-3">
+          <div class="col-md-6">
+            <fieldset>
+              <legend class="col-form-label p-0">What type of pet?</legend>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" id="dog" name="pet-type" value="dog">
+                <label class="form-check-label" for="dog">Dog</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" id="cat" name="pet-type" value="cat">
+                <label class="form-check-label" for="cat">Cat</label>
+              </div>
+            </fieldset>
+            <label class="form-label mt-4" for="breed">Pet's breed:</label>
+            <select class="form-select" id="breed" name="pet-breed">
+              <option value="calico">Calico</option>
+              <option value="tabby">Tabby</option>
+              <option value="corgi">Corgi</option>
+            </select>
+            <label class="form-label mt-4" for="age">Pet's age:</label>
+            <input class="form-control" type="number" id="age" name="pet-age">
+          </div>
+          <div class="col-md-6">
+            <label class="form-label" for="backstory">Pet's backstory:</label>
+            <textarea class="form-control" id="backstory" name="pet-backstory" rows="8"></textarea>
+          </div>
+        </div>
+
+        <div class="row mt-4">
+          <div class="col-md-6">
+              <label class="form-label" for="email">Owner's email:</label>
+              <input class="form-control" type="email" id="email" name="owner-email">
+            <div class="form-check mt-3">
+              <input class="form-check-input" type="checkbox" id="mailing-list" name="add-to-mailing-list" value="true">
+              <label class="form-check-label" for="mailing-list">Add me to your mailing list</label>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex justify-content-center align-items-center">
+            <button class="btn btn-secondary">Save this pet</button>
+          </div>
+        </div>
       </form>
     </div>
   </main>
