--- a/yoyo-detail.html
+++ b/yoyo-detail.html
@@ -38,44 +38,72 @@
 
   <main>
     <div class="container">
-      <h1 class="text-secondary">Meet Yoyo</h1>
-      <figure>
-        <img src="images/yoyosittingonthefence.jpg" alt="Yoyo the cat sitting on a fence enjoying some fresh air"
-          height="200" width="300">
-        <figcaption>Yoyo enjoys being out in the backyard</figcaption>
-      </figure>
+      <div class="row">
+        <div class="col-md-6">
+          <h1 class="text-secondary">Meet Yoyo</h1>
+          <figure>
+            <img class="rounded-circle detail-image" src="images/yoyosittingonthefence.jpg"
+              alt="Yoyo the cat sitting on a fence enjoying some fresh air" height="200" width="300">
+            <figcaption>Yoyo enjoys being out in the backyard</figcaption>
+          </figure>
+        </div>
 
-      <section>
-        <h2 class="text-secondary">About Me</h2>
-        <p>Pet type: Cat</p>
-        <p>Breed: Tabby</p>
-        <p>Age: 11</p>
-        <p>Temperament: Gentle</p>
-      </section>
+        <div class="col-md-6 mt-auto">
+          <section>
+            <h2 class="text-secondary">About Me</h2>
+            <table class="table table-striped">
+              <tbody>
+                <tr>
+                  <td>Pet type:</td>
+                  <td class="fw-bold">Cat</td>
+                </tr>
+                <tr>
+                  <td>Breed:</td>
+                  <td class="fw-bold">Tabby</td>
+                </tr>
+                <tr>
+                  <td>Age:</td>
+                  <td class="fw-bold">11</td>
+                </tr>
+                <tr>
+                  <td>Temperament:</td>
+                  <td class="fw-bold">Gentle</td>
+                </tr>
+              </tbody>
+            </table>
+          </section>
+        </div>
+      </div>
 
-      <section>
-        <h2 class="text-secondary">Fun Facts</h2>
-        <ul>
-          <li>Yoyo loves to snuggle on your lap after a long day.
-            He'll curl in a ball and nap.</li>
-          <li>His favorite toy is anything containing catnip.</li>
-          <li>At night, he sleeps at the foot of the bed.</li>
-        </ul>
-      </section>
+      <div class="row">
+        <div class="col-md-8">
+          <section>
+            <h2 class="text-secondary pt-2">My Story</h2>
+            <p>I was adopted from a shelter and was so happy to find a
+              home here at the cafe.</p>
+            <p>My brother Vanny is also here, but we don't get along.</p>
+            <p>I am exceptionally smart.
+              If I want to leave the cafe and go to my home upstairs,
+              I walk past the video doorbell until it makes a funny noise.
+              Then I wait until one of my humans opens the door for me.
+              I've trained them well.</p>
+            <p>If I'm <em>lonely</em>, I meow loudly.
+              When <span class="text-info fw-bold">I'm hungry</span>, I stand by my bowl.</p>
+          </section>
+        </div>
 
-      <section>
-        <h2 class="text-secondary">My Story</h2>
-        <p>I was adopted from a shelter and was so happy to find a
-          home here at the cafe.</p>
-        <p>My brother Vanny is also here, but we don't get along.</p>
-        <p>I am exceptionally smart.
-          If I want to leave the cafe and go to my home upstairs,
-          I walk past the video doorbell until it makes a funny noise.
-          Then I wait until one of my humans opens the door for me.
-          I've trained them well.</p>
-        <p>If I'm <em>lonely</em>, I meow loudly.
-          When <span>I'm hungry</span>, I stand by my bowl.</p>
-      </section>
+        <div class="col-md-4">
+          <section class="border border-2 border-secondary">
+            <h2 class="text-light bg-secondary p-2">Fun Facts</h2>
+            <ul>
+              <li>Yoyo loves to snuggle on your lap after a long day.
+                He'll curl in a ball and nap.</li>
+              <li>His favorite toy is anything containing catnip.</li>
+              <li>At night, he sleeps at the foot of the bed.</li>
+            </ul>
+          </section>
+        </div>
+      </div>
     </div>
   </main>
 
